css reloading bug example
SQUASHED: AUTO-COMMIT-src-components-widgets-css-reloading-test-widget.css,AUTO-COMMIT-src-components-widgets-css-reloading-test-widget.html,AUTO-COMMIT-src-components-widgets-css-reloading-test-widget.js,

--- a/src/components/widgets/css-reloading-test-widget.css
+++ b/src/components/widgets/css-reloading-test-widget.css
@@ -1,9 +1,9 @@
 #foo {
-  border: 19px solid yellow;
+  border: 22px green solid;
 }
 #bar {
-  border: 19px solid yellow;
-  color: red;
+  border: 19px solid pink;
+
   font-size: bold;
 }
 
